refactor and change functionality

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <button id="gridSize">Change Grid Size</button>
-    <div id="gridContainer"></div>
-    <button id="gridClear">Clear Canvas</button>
+    <button id="resize">Regrid - Change Grid Size</button>
+    <div id="container"></div>
 </body>
 </html>
